--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -12,21 +11,28 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$legend_of_chuck-primary: mat.define-palette(mat.$indigo-palette);
-$legend_of_chuck-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$legend_of_chuck-primary: mat.define-palette(mat.$brown-palette, 300);
+$legend_of_chuck-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $legend_of_chuck-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$legend_of_chuck-theme: mat.define-light-theme((
-  color: (
-    primary: $legend_of_chuck-primary,
-    accent: $legend_of_chuck-accent,
-    warn: $legend_of_chuck-warn,
+$legend_of_chuck-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $legend_of_chuck-primary,
+      accent: $legend_of_chuck-accent,
+      warn: $legend_of_chuck-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,5 +41,31 @@ $legend_of_chuck-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: pink;
+  border-radius: 8px;
+  margin: 0 1em;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
