Add Google fonts

--- a/src/app/components/legend/legend.component.scss
+++ b/src/app/components/legend/legend.component.scss
@@ -1,3 +1,9 @@
+p {
+  font-family: "Share Tech Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
 section {
   padding: 0 1em 0;
 }
