--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,1 +1,5 @@
-
+h1 {
+  font-family: "Urbanist", sans-serif !important;
+  font-optical-sizing: auto !important;
+  font-weight: 900 !important;
+}
