Add breakpoint for desktop, and font-family

--- a/src/app/components/legend/legend.component.scss
+++ b/src/app/components/legend/legend.component.scss
@@ -33,3 +33,9 @@ button {
   height: 1.25rem !important;
   width: 1.25rem !important;
 }
+
+@media (min-width: 760px) {
+  mat-card {
+    margin: 2em 20%;
+  }
+}
