--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -2,4 +2,5 @@ h1 {
   font-family: "Urbanist", sans-serif !important;
   font-optical-sizing: auto !important;
   font-weight: 900 !important;
+  font-size: 1.25rem !important;
 }
