Fix padding and, disable categories while still printing joke

--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -4,13 +4,10 @@
       color="primary"
       *ngFor="let category of categories"
       (click)="select(category)"
+      [disabled]="printProgress != 100"
     >
       <mat-chip-avatar>{{ category.icon }}</mat-chip-avatar>
       <span>{{ category.category }}</span>
     </mat-chip>
-    <!-- <button mat-icon-button color="primary" *ngFor="let category of categories">
-      <mat-icon>{{ category.icon }}</mat-icon>
-      <span>{{ category.category }}</span>
-    </button> -->
   </div>
 </main>
