--- a/src/app/components/legend/legend.component.html
+++ b/src/app/components/legend/legend.component.html
@@ -1,5 +1,5 @@
-<section color="accent">
-  <app-categories></app-categories>
+<section>
+  <app-categories [printProgress]="progress"></app-categories>
 </section>
 
 <main class="container">
